--- a/.github/workflows/epic-checkbox-sync.yml
+++ b/.github/workflows/epic-checkbox-sync.yml
@@ -2,12 +2,12 @@ name: Sync EPIC checkboxes (close, reopen & route to Project)
 
 on:
   issues:
-    types: [edited]   # dispara ao marcar/desmarcar checkbox no EPIC (muda o body)
+    types: [edited]
 
 env:
-  ORG: "Compila-logo-existe"   # org ou usuário dono do Project v2
-  PROJECT_NUMBER: "7"          # número do Project v2 (veja na URL do Project)
-  # Quando FECHAR: label -> opção do campo Status
+  # Se deixar vazio, usa automaticamente o owner do repo (context.repo.owner)
+  ORG: ""
+  PROJECT_NUMBER: "7"
   MAP_CLOSED_JSON: >
     {
       "tipo:interface": "Pronto - Interface",
@@ -15,13 +15,11 @@ env:
       "tipo:unidade": "Pronto - Unidade",
       "default": "Pronto"
     }
-  # Quando REABRIR: label -> opção do campo Status (deixe {} para não alterar ao reabrir)
   MAP_OPEN_JSON: >
     {
       "default": "Em Progresso"
     }
-  # Se a issue não estiver no Project, adicionar automaticamente?
-  ADD_IF_MISSING: "false"
+  ADD_IF_MISSING: "true"
 
 jobs:
   sync:
@@ -37,6 +35,9 @@ jobs:
     steps:
       - name: Close/Reopen & Move in Project
         uses: actions/github-script@v7
+        # se precisar usar PAT, descomente a linha abaixo e crie o secret WORKFLOW_PAT
+        # with:
+        #   github-token: ${{ secrets.WORKFLOW_PAT }}
         with:
           script: |
             const owner = context.repo.owner;
@@ -46,59 +47,48 @@ jobs:
             const after  = context.payload.issue.body || '';
 
             const getChecked = (s) => {
-              const re = /-\s*\[[xX]\]\s*#(\d+)/g;         // - [x] #123
+              const re = /-\s*\[[xX]\]\s*#(\d+)/g;
               return new Set([...s.matchAll(re)].map(m => Number(m[1])));
             };
 
             const prev = getChecked(before);
             const curr = getChecked(after);
 
-            const toClose = [...curr].filter(n => !prev.has(n));  // marcados agora
-            const toOpen  = [...prev].filter(n => !curr.has(n));  // desmarcados agora
-
+            const toClose = [...curr].filter(n => !prev.has(n));
+            const toOpen  = [...prev].filter(n => !curr.has(n));
             const uniq = (arr) => [...new Set(arr)];
 
             const closedNow  = [];
             const reopenedNow = [];
 
-            // ---- 1) Fechar as novas marcadas
+            // ---- 1) Close
             for (const num of uniq(toClose)) {
               try {
                 const { data } = await github.rest.issues.get({ owner, repo, issue_number: num });
-                if (data.pull_request) { core.info(`#${num} é PR; ignorando close`); continue; }
+                if (data.pull_request) { core.info(`#${num} é PR; ignore`); continue; }
                 if (data.state !== 'closed') {
                   await github.rest.issues.update({ owner, repo, issue_number: num, state: 'closed' });
-                  closedNow.push({ number: num, labels: (data.labels||[]).map(l => typeof l==='string'? l : l.name) });
-                  core.info(`Closed #${num}`);
-                } else {
-                  core.info(`#${num} já estava fechado`);
-                  closedNow.push({ number: num, labels: (data.labels||[]).map(l => typeof l==='string'? l : l.name) });
                 }
-              } catch (e) {
-                core.warning(`Falha ao fechar #${num}: ${e.message}`);
-              }
+                closedNow.push({ number: num, labels: (data.labels||[]).map(l => typeof l==='string'? l : l.name) });
+                core.info(`Closed #${num}`);
+              } catch (e) { core.warning(`Falha ao fechar #${num}: ${e.message}`); }
             }
 
-            // ---- 2) Reabrir as desmarcadas
+            // ---- 2) Reopen
             for (const num of uniq(toOpen)) {
               try {
                 const { data } = await github.rest.issues.get({ owner, repo, issue_number: num });
-                if (data.pull_request) { core.info(`#${num} é PR; ignorando reopen`); continue; }
+                if (data.pull_request) { core.info(`#${num} é PR; ignore`); continue; }
                 if (data.state !== 'open') {
                   await github.rest.issues.update({ owner, repo, issue_number: num, state: 'open' });
-                  reopenedNow.push({ number: num, labels: (data.labels||[]).map(l => typeof l==='string'? l : l.name) });
-                  core.info(`Reopened #${num}`);
-                } else {
-                  core.info(`#${num} já estava aberta`);
-                  reopenedNow.push({ number: num, labels: (data.labels||[]).map(l => typeof l==='string'? l : l.name) });
                 }
-              } catch (e) {
-                core.warning(`Falha ao reabrir #${num}: ${e.message}`);
-              }
+                reopenedNow.push({ number: num, labels: (data.labels||[]).map(l => typeof l==='string'? l : l.name) });
+                core.info(`Reopened #${num}`);
+              } catch (e) { core.warning(`Falha ao reabrir #${num}: ${e.message}`); }
             }
 
-            // ---- 3) Atualizar Status no Project v2
-            const ORG = process.env.ORG;
+            // ---- 3) Project v2 route
+            const LOGIN = (process.env.ORG || '').trim() || owner;           // usa ORG se setado, senão owner do repo
             const PROJECT_NUMBER = parseInt(process.env.PROJECT_NUMBER, 10);
             const ADD_IF_MISSING = process.env.ADD_IF_MISSING === "true";
             const MAP_CLOSED = JSON.parse(process.env.MAP_CLOSED_JSON || "{}");
@@ -109,35 +99,52 @@ jobs:
               return map.default;
             };
 
-            // 3.1 carregar project + campo Status + opções
+            core.info(`Lookup Project: login='${LOGIN}' number=${PROJECT_NUMBER}`);
+
             const projQuery = `
-              query($org:String!, $number:Int!) {
-                organization(login: $org) {
-                  projectV2(number: $number) {
+              query($login:String!, $number:Int!) {
+                organization(login:$login) {
+                  projectV2(number:$number) {
                     id title
-                    fields(first: 50) {
+                    fields(first:50) {
                       nodes {
-                        ... on ProjectV2SingleSelectField {
-                          id name
-                          options { id name }
-                        }
+                        ... on ProjectV2SingleSelectField { id name options { id name } }
+                      }
+                    }
+                  }
+                }
+                user(login:$login) {
+                  projectV2(number:$number) {
+                    id title
+                    fields(first:50) {
+                      nodes {
+                        ... on ProjectV2SingleSelectField { id name options { id name } }
                       }
                     }
                   }
                 }
               }`;
+
             let project;
             try {
-              const r = await github.graphql(projQuery, { org: ORG, number: PROJECT_NUMBER });
-              project = r.organization?.projectV2;
+              const r = await github.graphql(projQuery, { login: LOGIN, number: PROJECT_NUMBER });
+              project = r.organization?.projectV2 ?? r.user?.projectV2;
             } catch (e) {
-              core.warning(`Falha ao buscar Project v2 ${ORG}#${PROJECT_NUMBER}: ${e.message}`);
+              core.setFailed(`Falha ao buscar Project v2 ${LOGIN}#${PROJECT_NUMBER}: ${e.message}`);
               return;
             }
-            if (!project) { core.warning(`Project v2 ${ORG}#${PROJECT_NUMBER} não encontrado`); return; }
+            if (!project) {
+              core.setFailed(
+                `Project v2 '${LOGIN}#${PROJECT_NUMBER}' não encontrado/sem acesso.\n` +
+                `→ Confirme que o repo ${owner}/${repo} está **linkado** ao Project (Repository → Projects → Link a project).\n` +
+                `→ Ou use PAT em github-script (WORKFLOW_PAT).`
+              );
+              return;
+            }
 
+            core.info(`Project encontrado: ${project.title} (id: ${project.id})`);
             const statusField = project.fields.nodes.find(f => f?.name === "Status");
-            if (!statusField) { core.warning(`Campo "Status" não encontrado no Project`); return; }
+            if (!statusField) { core.warning(`Campo "Status" não encontrado no Project '${project.title}'`); return; }
 
             const findOptionId = (name) => statusField.options.find(o => o.name === name)?.id;
 
@@ -146,7 +153,7 @@ jobs:
                 repository(owner:$owner, name:$repo) {
                   issue(number:$num) {
                     id
-                    projectItems(first: 50) { nodes { id project { ... on ProjectV2 { id number title } } } }
+                    projectItems(first:50) { nodes { id project { ... on ProjectV2 { id number title } } } }
                   }
                 }
               }`;
@@ -165,11 +172,10 @@ jobs:
               }`;
 
             const ensureItemAndSet = async (issueNumber, statusName) => {
-              if (!statusName) return; // nada a fazer se não há mapeamento
+              if (!statusName) return;
               const optionId = findOptionId(statusName);
-              if (!optionId) { core.warning(`Opção "${statusName}" não existe no Status do Project`); return; }
+              if (!optionId) { core.warning(`Opção "${statusName}" não existe no Status do Project '${project.title}'`); return; }
 
-              // pega item da issue no Project
               const res = await github.graphql(issueItemQuery, { owner, repo, num: issueNumber });
               const issueId = res.repository?.issue?.id;
               let item = res.repository?.issue?.projectItems?.nodes?.find(n => n.project?.id === project.id);
@@ -190,13 +196,10 @@ jobs:
               core.info(`Status de #${issueNumber} → "${statusName}" atualizado no Project "${project.title}"`);
             };
 
-            // fechar → mover para "Pronto - X"
             for (const it of closedNow) {
               const statusName = pickStatus(it.labels, MAP_CLOSED);
               await ensureItemAndSet(it.number, statusName);
             }
-
-            // reabrir → mover para "Em Progresso - X" (se mapeado)
             for (const it of reopenedNow) {
               const statusName = pickStatus(it.labels, MAP_OPEN);
               await ensureItemAndSet(it.number, statusName);
