--- a/ControleDeCinema.Testes.Integracao/ControleDeCinema.Testes.Integracao.csproj
+++ b/ControleDeCinema.Testes.Integracao/ControleDeCinema.Testes.Integracao.csproj
@@ -10,6 +10,7 @@
       For more information, visit https://learn.microsoft.com/dotnet/core/testing/unit-testing-platform-integration-dotnet-test#show-failure-per-test
       -->
     <TestingPlatformShowTestsFailure>true</TestingPlatformShowTestsFailure>
+    <UserSecretsId>ed145fd9-d543-447f-b3bb-1209cd3a18a1</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
