feat: Implementa testes de unidades, de cadastro do ModuloSessao.

--- a/ControleDeCinema.Testes.Unidades/ControleDeCinema.Testes.Unidades.csproj
+++ b/ControleDeCinema.Testes.Unidades/ControleDeCinema.Testes.Unidades.csproj
@@ -17,4 +17,8 @@
     <PackageReference Include="NBuilder" Version="6.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ControleDeCinema.Aplicacao\ControleDeCinema.Aplicacao.csproj" />
+  </ItemGroup>
+
 </Project>
