--- a/.github/workflows/master_controle-de-cinema.yml
+++ b/.github/workflows/master_controle-de-cinema.yml
@@ -34,6 +34,53 @@ jobs:
         with:
           name: .net-app
           path: ${{env.DOTNET_ROOT}}/myapp
+  
+  test:
+    runs-on: ubuntu-latest
+    needs: build
+    permissions:
+      contents: read
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up .NET Core
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '8.x'
+    
+      - name: Run tests
+        run: dotnet test --configuration Release --verbosity normal
+        env: 
+          ASPNET_ENVIRONMENT: "GITHUB_ACTIONS"
+          SQL_CONNECTION_STRING: ${{ secrets.SQL_CONNECTION_STRING }}
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+          NEWRELIC_LICENSE_KEY: ${{ secrets.NEWRELIC_LICENSE_KEY }}
+
+  migrate:
+    runs-on: windows-latest
+    needs: [build, test]
+    permissions:
+      contents: read
+      
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up .NET Core
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '8.x'
+    
+      - name: Install EF Core CLI
+        run: dotnet tool install --global dotnet-ef
+    
+      - name: Apply EF Core migrations
+        run: dotnet ef database update --project ./ControleDeCinema.Infraestrutura.Orm --startup-project ./GeradorDeTestes.WebApp
+        env: 
+          ASPNET_ENVIRONMENT: "GITHUB_ACTIONS"
+          SQL_CONNECTION_STRING: ${{ secrets.SQL_CONNECTION_STRING }}
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+          NEWRELIC_LICENSE_KEY: ${{ secrets.NEWRELIC_LICENSE_KEY }}
 
   deploy:
     runs-on: windows-latest
@@ -62,4 +109,5 @@ jobs:
           app-name: 'controle-de-cinema'
           slot-name: 'Production'
           package: .
+
           
