--- a/.github/workflows/master_controle-de-cinema.yml
+++ b/.github/workflows/master_controle-de-cinema.yml
@@ -84,7 +84,7 @@ jobs:
 
   deploy:
     runs-on: windows-latest
-    needs: build
+    needs: [build, test, migrate]
     permissions:
       id-token: write #This is required for requesting the JWT
       contents: read #This is required for actions/checkout
@@ -111,3 +111,4 @@ jobs:
           package: .
 
           
+
